
0.05 (not yet released)
    (ms) added support for dump() and restore(). Test cases in
         t/007Dump.t will wait until these functions are 
         available in rrdtool, and are skipped until then.

0.04 05/22/2004
    (ms) added more functionality to graph(), new test cases.
    (ms) if a graph contains several files, use the defaults
         from each file
    (ms) added tune(), info(), last().
         dump()/restore() added also, but not activated yet, 
         because not available via RRDs.

0.03 05/18/2004
    (ms) fixed discovery of CFs
    (ms) fixed update with values/hash and added test case

0.02 05/16/2004
    (ms) used rrdtool info for meta queries

0.01 05/12/2004
    (ms) Where it all began.

TODO:

* Why doesn't RRDs offer dump()/restore() methods?
* some less frequently used graph parameters like CDEF, PRINT, x-grid
  aren't integrated yet or could be integrated more OO-like.
* fetch_start/next iterator with saved timestamp, without caching all values